--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     ];
 
     
-    var path = "img/cubemap/space/";
+   /* var path = "img/cubemap/space/";
     var format = '.png';
     var urls = [
         path + 'px' + format, path + 'nx' + format,
@@ -343,7 +343,7 @@
     ];
 
 
-  /*  var path = "img/cubemap/brud/";
+   var path = "img/cubemap/brud/";
     var format = '.jpg';
     var urls = [
         path + 'posx' + format, path + 'negx' + format,
